hamburger fix on mobile

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -411,9 +411,9 @@ body.blog header .headerline .headercontent .landingmenu nav .search_icon {
 .hamburger-inner, 
 .hamburger-inner:after, 
 .hamburger-inner:before {
-	background-color: var(--main-text-primary-color, #0D0D0D);
+	background-color: var(--main-text-secondary-color, #666);
 	border-radius: 0px;
-	height: 2px;
+	height: 1.5px;
 	width: 16px;
 }
 
